objects/Product_Groups__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Division__c</fullName>
        <label>Division</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Code__c</fullName>
        <label>Group Code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Name__c</fullName>
        <label>Group Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Product Groups</label>
</CustomObject>